--- a/merchandise/templates/merchandise/merch_item.html
+++ b/merchandise/templates/merchandise/merch_item.html
@@ -2,9 +2,9 @@
 {% block content %}
 <main class="container-fluid d-flex align-items-center justify-content-center min-height-main-footer">
     <div class="container merch-item-height d-flex align-items-center justify-content-center rounded-4">
-        <div class="row col-xl-8 col-md-10 col-sm-12 col-12 ">
+        <div class="row">
             <!-- On Large Screens, Display Side by Side -->
-            <div class="col-xl-8 col-md-10 col-sm-12 col-12 d-flex align-items-center justify-content-center">
+            <div class="col-md-6 d-flex align-items-center justify-content-center">
                 <img src="{{ merch_item.image.url }}" alt="{{ merch_item.name }}" class="img-fluid p-3 rounded-5" />
             </div>
             <div class="col-md-6 align-content-around">
