--- a/templates/base.html
+++ b/templates/base.html
@@ -74,33 +74,11 @@
                 <!-- Collapsible Nav Bar -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon bg-white"></span>
+                    <!-- <span class="navbar-toggler-icon bg-white"></span> -->
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link nav-bar-text" aria-current="page" href="{% url 'home' %}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-bar-text" aria-current="page" href="#">Anthology</a>
-                        </li>
-                        <li class="nav-item nav-bar-text">
-                            <a class="nav-link nav-bar-text" href="{% url 'all_merchandise' %}">Merchandise</a>
-                        </li>
-                        <li class="nav-item nav-bar-text">
-                            <a class="nav-link nav-bar-text" href="#">Gallery</a>
-                        </li>
-
                         {% if request.user.is_authenticated %}
-                        <li class="nav-item nav-bar-text">
-                            <a class="nav-link nav-bar-text" href="#">Chat Room</a>
-                        </li>
-                        {% if request.user.is_superuser %}
-                        <li class="nav-item">
-                            <a class="nav-link nav-bar-text" href="{% url 'admin:index' %}"
-                                aria-label="Admin Panel">Admin Panel</a>
-                        </li>
-                        {% endif %}
                         <li class="nav-item">
                             <a class="nav-link nav-bar-text" href="{% url 'account_logout' %}"
                                 aria-label="Logout">Logout</a>
@@ -117,26 +95,44 @@
         </nav>
         <!-- Second Navbar (White Background) -->
         <nav class="navbar navbar-expand-lg second-navbar">
-            <div class="container align-content-center ">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item second-navbar-li">
-                        <a class="nav-link " href="#">All Merchandise</a>
-                    </li>
-                    <li class="nav-item second-navbar-li">
-                        <a class="nav-link " href="#">T-Shirts</a>
-                    </li>
-                    <li class="nav-item second-navbar-li">
-                        <a class="nav-link " href="#">Cups & Bottles</a>
-                    </li>
-                    <li class="nav-item second-navbar-li">
-                        <a class="nav-link" href="#">Pens & Keyrings</a>
-                    </li>
-                    <li class="nav-item second-navbar-li">
-                        <a class="nav-link" href="#">Band CD</a>
-                    </li>
-                </ul>
+            <div class="container align-content-center">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon bg-white"></span>
+                </button>
+        
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+                        </li>
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" aria-current="page" href="#">Anthology</a>
+                        </li>
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" href="{% url 'all_merchandise' %}">All Merchandise</a>
+                        </li>
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" href="#">T-Shirts</a>
+                        </li>
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" href="#">Cups & Bottles</a>
+                        </li>
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" href="#">Pens & Keyrings</a>
+                        </li>
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" href="#">Band CD</a>
+                        </li>
+                        {% if request.user.is_authenticated %}
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" href="#">Chat Room</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
             </div>
         </nav>
+        
     </header>
     <!-- Messages alert area -->
 
