--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -2,8 +2,8 @@
 {% block content %}
     {% load static %}
 
-    <main class="container d-flex justify-content-start align-items-center adjust-index-height col-md-10 min-height-main-footer">
-        <div class="">
+    <main class="container d-flex justify-content-start align-items-center min-height">
+        <div>
             <div class="col-lg-8 col-md-9 col-sm-12 col-12 p-2 text-white ">
                 <br/>
                 <h1 class="lifeline-font">
