--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<h1 class="min-height-login">{% trans "Sign In" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
@@ -33,10 +33,11 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 <a class="text-white" href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
+<form class="login " method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
   {{ form|crispy }}
   {% if redirect_field_value %}
+  <br>
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <a class="button secondaryAction text-white" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
