--- a/merchandise/templates/merchandise/all_merch.html
+++ b/merchandise/templates/merchandise/all_merch.html
@@ -8,9 +8,9 @@
         <div class="col-xl-9 col-md-11 col-sm-12 col-12">
             <div class="row justify-content-center">
                 {% for merch in all_merch %}
-                    <div class="col-lg-3 col-md-6 col-sm-8 col-12 p-1">
+                    <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 p-1">
                         <div class="card indigo-dye">
-                            <a href="{% url 'merch_item' merch.id %}">
+                            <a href="{% url 'merch_item' merch.id %}" class="mx-auto ">
                                 <img src="{{ merch.image.url }}" alt="{{ merch.name }}" class="card-img-top img-fluid p-3" />
                             </a>
                             <div class="card-body">
