--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -1,10 +1,34 @@
 /* General page setup */
 
+.all-body {
+    background-image: url('/static/images/studio_back.jpg');
+    background-position: center center;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: calc(100vh - 140px);
+    width: 100vw;
+}
+
+
+
 .center-element {
     display: flex;
     justify-content: start;
     align-items: center;
 }
+
+/* Merchandis all */
+
+.card-img-top{
+    height: 300px;
+    width: auto;
+}
+
+
 
 
 /* Song page songs <ul> No Bullet */
@@ -60,18 +84,7 @@
 
 
 
-.all-body {
-    background-image: url('/static/images/studio_back.jpg');
-    background-position: center center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: calc(100vh - 140px);
-    width: 100vw;
-}
+
 
 /* Footer phantom main page */
 
