--- a/templates/base.html
+++ b/templates/base.html
@@ -71,11 +71,7 @@
                         </div>
                     </form>
                 </div>
-                <!-- Collapsible Nav Bar -->
-                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon bg-white"></span>
-                </button> -->
+                <!-- Login/Logout seperate in first nav bar-->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         {% if request.user.is_authenticated %}
@@ -106,7 +102,7 @@
                             <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item second-navbar-li">
-                            <a class="nav-link" aria-current="page" href="#">Anthology</a>
+                            <a class="nav-link" aria-current="page" href="{% url 'song_list' %}">Anthology</a>
                         </li>
                         <li class="nav-item second-navbar-li">
                             <a class="nav-link" href="{% url 'all_merchandise' %}">All Merchandise</a>
