bug(musicmod): fix error upload image

--- a/merchandise/templates/merchandise/all_merch.html
+++ b/merchandise/templates/merchandise/all_merch.html
@@ -5,7 +5,7 @@
     <h1 class="text-center lifeline-font"> <i>Merchandise</i></h1>
     <!-- Rendering All Merchandise -->
     <div class="row justify-content-center align-items-center">
-        <div class="col-xl-9 col-md-11 col-sm-12 col-12">
+        <div class="col-xxl-8 col-xl-6 col-md-8 col-sm-10 col-12">
             <div class="row justify-content-center">
                 {% for merch in all_merch %}
                     <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 p-1">
