--- a/merchandise/templates/merchandise/merch_item.html
+++ b/merchandise/templates/merchandise/merch_item.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <main class="container-fluid d-flex align-items-center justify-content-center min-height-main-footer">
     <div class="container merch-item-height d-flex align-items-center justify-content-center rounded-4">
         <div class="row">
@@ -9,20 +8,20 @@
             </div>
             <div class="col-md-6 align-content-around">
                 <!-- Right Side Text -->
-                <br>
+                <br />
                 <h5 class="card-title">{{ merch_item.name }}</h5>
-                <br>
+                <br />
                 <p class="card-text">{{ merch_item.description }}</p>
-                <br>
+                <br />
                 <p class="card-text">Price: ${{ merch_item.price }}</p>
                 {% if merch_item.rating %}
                 <small class="discription-page-text rating"><i class="fas fa-star mr-1 star"
-                        style="color: gold"></i>{{merch_item.rating }} / 5 </small>
+                        style="color: gold"></i>{{merch_item.rating }} / 5
+                </small>
                 {% else %}
                 <p class="discription-page-text">No rating yet</p>
                 {% endif %}
             </div>
-
         </div>
     </div>
 </main>
