--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
+
+{% load static %}
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
-    {% load static %}
+  
 
     <main class="container d-flex justify-content-start align-items-center min-height">
         <div>
