feat(bag): create item size in bag mod

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -15,9 +15,14 @@
     </div>
   </div>
 
+  <div>
+
+    
+  </div>
   <div class="row">
     <div class="col">
       {% if bag_items %}
+
       <div class="table-responsive rounded">
         <div class="table-responsive rounded">
             <table class="table table-sm table-borderless">
@@ -32,25 +37,26 @@
                 </thead>
 
                 {% for item in bag_items %}
-                    <tr>
-                        <td class="p-3 w-25">
-                            <img class="img-fluid rounded" src="{{ item.product.image.url }}">
-                        </td>
-                        <td class="py-3">
-                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                            <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
-                        </td>
-                        <td class="py-3">
-                            <p class="my-0">${{ item.product.price }}</p>
-                        </td>
-                        <td class="py-3 w-25">
-                            <p class="my-0">{{ item.quantity }}</p>
-                        </td>
-                        <td class="py-3">
-                            <p class="my-0">${{ item.product.price }}</p>
-                        </td>
-                    </tr>
-                {% endfor %}
+                <tr>
+                    <td class="p-3 w-25">
+                        <img class="img-fluid rounded" src="{{ item.product.image.url }}">
+                    </td>
+                    <td class="py-3">
+                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                        <p class="my-0"><strong>Size: </strong>{% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
+                        <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                    </td>
+                    <td class="py-3">
+                        <p class="my-0">${{ item.product.price }}</p>
+                    </td>
+                    <td class="py-3 w-25">
+                        <p class="my-0">{{ item.quantity }}</p>
+                    </td>
+                    <td class="py-3">
+                        <p class="my-0">${{ item.product.price }}</p>
+                    </td>
+                </tr>
+            {% endfor %}
                 <tr>
                     <td colspan="5" class="pt-5 text-right">
                         <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
@@ -81,13 +87,12 @@
       </div>
       {% else %}
       <p class="lead mb-5 shopping-text">Your bag is empty.</p>
-      <a
-        href="{% url 'all_merchandise' %}" class="btn btn-outline-white rounded-0 btn-lg" >
+      <a href="{% url 'all_merchandise' %}" class="btn btn-outline-white rounded-0 btn-lg" >
         <span class="icon">
-        <i class="fas fa-chevron-left text-white"></i>
+            <i class="fas fa-chevron-left text-white"></i>
         </span>
         <span class="text-uppercase shopping-text">Keep Shopping</span>
-      </a>
+        </a>
       {% endif %}
     </div>
   </div>
