--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -20,6 +20,25 @@
     align-items: center;
 }
 
+/* Signup/Signout/Signin */
+.signup-container {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: calc(100vh - 250px);
+}
+
+.signup-form {
+    width: 100%; /* Adjust the width as needed */
+    max-width: 400px; /* Set a maximum width for the form */
+}
+
+.signup-text{
+    color:white;
+}
+
 /* Merchandis all */
 
 .card-img-top {
