--- a/templates/base.html
+++ b/templates/base.html
@@ -165,11 +165,14 @@
             </div>
         </div>
     </div>
+    {% block page_header %}
+    {% endblock %}
 
     {% block content %}
-
     {% endblock %}
-    <!-- Message Timer -->
+
+    {% block postloadjs %}
+       <!-- Message Timer -->
     <script>
         setTimeout(function () {
             let messages = document.getElementById('msg');
@@ -177,9 +180,14 @@
             alert.close();
         }, 2500);
     </script>
+    <script src="{% static 'styles/js/quantity_update.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-        </script>
+    </script>
+    {% endblock %}
+
+
+    
 </body>
 
 </html>
