--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -54,7 +54,7 @@
                         <p class="my-0">${{ item.product.price }}</p>
                     </td>
                     <td class="py-3 w-25">
-                        <form class="form update-form" method="POST" action="">
+                        <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                             {% csrf_token %}
                             <div class="form-group">
                                <p> Here is Item  {{ item.item_id }}  Here is Quantity {{ item.quantity }}</p>
@@ -86,7 +86,7 @@
                             </div>
                         </form>
                         <a class="update-link text-info"><small>Update</small></a>
-                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
+                        <a class="remove-item text-danger float-end" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
                     </td>
                     <td class="py-3">
                         <p class="my-0">${{ item.product.price }}</p>
@@ -140,7 +140,7 @@
 
 {{ block.super }}
 
-
+<script src="{% static 'styles/js/quantity_update.js' %}"></script>
 <script type="text/javascript">
     // Update quantity on click
     $('.update-link').click(function(e) {
