--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -85,6 +85,13 @@
     color: white;
 }
 
+
+.btt-link,
+.update-link,
+.remove-item {
+    cursor: pointer;
+}
+
 .text-black {
     color: #000 !important;
 }
