--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -57,7 +57,6 @@
                         <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                             {% csrf_token %}
                             <div class="form-group">
-                               <p> Here is Item  {{ item.item_id }}  Here is Quantity {{ item.quantity }}</p>
                                 <div class="input-group">
                                     <div class="input-group-prepend">
                                         <button class="decrement-qty btn btn-sm btn-black rounded-0" 
@@ -86,12 +85,13 @@
                             </div>
                         </form>
                         <a class="update-link text-info"><small>Update</small></a>
-                        <a class="remove-item text-danger float-end" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
+                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
                     </td>
                     <td class="py-3">
                         <p class="my-0">${{ item.product.price }}</p>
                     </td>
                 </tr>
+                    
             {% endfor %}
                 <tr>
                     <td colspan="5" class="pt-5 text-right">
@@ -140,7 +140,7 @@
 
 {{ block.super }}
 
-<script src="{% static 'styles/js/quantity_update.js' %}"></script>
+
 <script type="text/javascript">
     // Update quantity on click
     $('.update-link').click(function(e) {
@@ -152,9 +152,9 @@
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('size');
-        var url = `/bag/remove/${itemId}`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+        var size = $(this).data('product_size');
+        var url = `/bag/remove/${itemId}/`;
+        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
 
         $.post(url, data)
          .done(function() {
