foormat css and ready for message

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 {% block content %}
   
 
-    <main class="container d-flex justify-content-start align-items-center min-height">
+    <main class="container d-flex justify-content-start align-items-center distance-top-nav">
         <div>
             <div class="col-lg-8 col-md-9 col-sm-12 col-12 p-2 text-white ">
                 <br/>
