--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -4,7 +4,7 @@
 
 {% block page_header %}
 
-<div class="container header-container">
+<div class="container header-container dave">
   <div class="row">
     <div class="col"></div>
   </div>
