--- a/merchandise/templates/merchandise/merch_item.html
+++ b/merchandise/templates/merchandise/merch_item.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-<main class="container-fluid d-flex align-items-center justify-content-center dave">
+<main class="container-fluid d-flex align-items-center justify-content-center nav-padding-merch-item">
     <div class="container  d-flex align-items-center justify-content-center rounded-4 ">
         <div class="row merch-item-height">
             <!-- On Large Screens, Display Side by Side -->
