--- a/templates/base.html
+++ b/templates/base.html
@@ -150,15 +150,15 @@
     </header>
     <!-- Messages alert area -->
 
-    {% if messages %}
+    <!-- {% if messages %}
         <div class="messages-container">
             {% for message in messages %}
                 {% include 'includes/toasts/toast_success.html' %}
             {% endfor %}
         </div>
-    {% endif %}
+    {% endif %} -->
 
-    <!-- <div class="container border-5 msg-container" style="margin-top: 140px;">
+    <div class="container border-5 msg-container" style="margin-top: 140px;">
         <div class="row">
             <div class="col-md-6 offset-md-2">
                 {% for message in messages %}
@@ -169,7 +169,7 @@
                 {% endfor %}
             </div>
         </div>
-    </div> -->
+    </div>
     {% block page_header %}
     {% endblock %}
 
