--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -2,9 +2,9 @@
     <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header bg-white text-dark">
-        <strong class="">Success!</strong>
+        <strong class="me-auto">Success!</strong>
         <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true float-end">&times;</span>
+            <span aria-hidden="true ">&times;</span>
         </button>
     </div>
     <div class="toast-body bg-white">
