--- a/templates/base.html
+++ b/templates/base.html
@@ -187,8 +187,8 @@
         </div>
     </div> -->
 
-    <div class="container border-5 msg-container" style="margin-top: 140px;">
-    </div>
+    <!-- <div class="container border-5 msg-container" style="margin-top: 140px;">
+    </div> -->
 
     
     {% block page_header %}
