--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -11,6 +11,7 @@
     background-repeat: no-repeat;
     min-height: calc(100vh - 140px);
     width: 100vw;
+    margin-top: 140px;
 }
 
 /* Padding Pages */
