--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,8 @@
     {% block extra_boot_strap %}
     {% endblock %}
 
+    {% block extra_css %}
+    {% endblock %}
 
 
     <!-- Font Awsome -->
