--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -16,12 +16,12 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay test"></div>
+    <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4 test ">Checkout</h2>
+                <h2 class="logo-font mb-4  ">Checkout</h2>
                 <hr>
             </div>
         </div>
