--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -37,6 +37,15 @@
     border: 1px solid #000;
 }
 
+select,
+select option {
+    color: #000000;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
+}
 
 .margin-bottom-fieldset {
     margin-bottom: 100rem !important;
