--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -31,7 +31,9 @@
             {{ orders }}
         </div>
     </div>
-    {% endblock %} {% block postloadjs %} {{ block.super }}
-    <script type="text/javascript" src="#"></script>
+    {% endblock %}
+    {% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
     {% endblock %}
 </div>
