--- a/templates/base.html
+++ b/templates/base.html
@@ -92,6 +92,7 @@
                                 {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
                                 <a href="{% url 'admin:index' %}" class="dropdown-item">Product Management</a>
+                                <a href="{% url 'add_merch' %}" class="dropdown-item">Add Merchandise</a>
                                 {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
