--- a/musicapp/templates/musicapp/song_list.html
+++ b/musicapp/templates/musicapp/song_list.html
@@ -22,10 +22,36 @@
                         Your browser does not support the audio element.
                     </audio>
                 </div>
+                {% if request.user.is_superuser %}
+                <small class="ml-3 mr-auto ">
+                    <a href="{% url 'song_update' pk=song.id %}">Edit</a>
+                    <!-- #javascript enabled Y/N  -->
+                    <a href="{% url 'song_delete' pk=song.id %}" class="confirm-delete text-danger">Delete</a>
+                </small>
+                {% endif %}
             </div>
         </div>
         {% endfor %}
     </div>
 </main>
 
+{% endblock %}
+{% block postloadjs %}
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Wait for the DOM to be fully loaded before attaching the click event handler
+        var deleteLinks = document.querySelectorAll('.confirm-delete');
+
+        deleteLinks.forEach(function (link) {
+            link.addEventListener('click', function (e) {
+                e.preventDefault();
+                var shouldDelete = confirm('Are you sure you want to delete this?');
+
+                if (shouldDelete) {
+                    window.location.href = link.getAttribute('href');
+                }
+            });
+        });
+    });
+</script>
 {% endblock %}
