--- a/merchandise/templates/merchandise/prod_confirm_delete.html
+++ b/merchandise/templates/merchandise/prod_confirm_delete.html
@@ -10,7 +10,7 @@
                 <h2 class="text-white">Confirm Deletion</h2>
                 <p class="text-white">Are you sure you want to delete {{ object.artist_name }} - {{ object.song_title }}?</p>
 
-                <form method="post" action="{% url 'delete_product' product_id %}">
+                <form method="post" action="{% url 'delete' pk=object.id %}">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger ">Delete</button>
                     <a href="{% url 'all_merchandise' %}" class="btn btn-secondary">Cancel</a>
