--- a/musicapp/templates/musicapp/song_update.html
+++ b/musicapp/templates/musicapp/song_update.html
@@ -3,13 +3,14 @@
 
 
 {% block content %}
+
 <div class="container header-container">
     <div class="overlay"></div>
     <div class="row">
         <div class="col-12 col-md-6">
             <div class="form-group-change">
                 <h2 class="text-white">Update a song</h2>
-                <form method="post" enctype="multipart/form-data">
+                <form method="post" class="form-group" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <button type="submit" class="btn btn-danger ">Update</button>
