css for comments

--- a/musicapp/templates/comments/comment_add.html
+++ b/musicapp/templates/comments/comment_add.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Add Comment to Song</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
+<div class="comments-card container d-flex flex-column justify-content-center align-items-center comments-bg-color">
+    <h1 class="comments-edit-card ">Make a Comment</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Submit</button>
+    </form>
+</div>
 {% endblock %}
