--- a/musicapp/templates/comments/comment_edit.html
+++ b/musicapp/templates/comments/comment_edit.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Edit Comment to Song</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
+
+<div class="comments-card container d-flex flex-column justify-content-center align-items-center comments-bg-color">
+    <h1 class="comments-edit-card mb-4">Edit Comment</h1>
+    <form method="post" class="text-white comments-edit-card">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
 {% endblock %}
