--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -156,6 +156,7 @@
     list-style-type: none;
 }
 
+.contact-us-title,.contact-us-label,
 .song-head {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #EAEAEA;
