got comment to work

--- a/merchandise/templates/merchandise/merch_item.html
+++ b/merchandise/templates/merchandise/merch_item.html
@@ -100,6 +100,7 @@
 </main>
 {% endblock %}
 {% block postloadjs %}
+<script src="{% static 'styles/js/quantity_update.js' %}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         // Wait for the DOM to be fully loaded before attaching the click event handler
