--- a/merchandise/templates/merchandise/add_merch.html
+++ b/merchandise/templates/merchandise/add_merch.html
@@ -43,7 +43,9 @@
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super }}
+<script type="text/javascript">
+    $('.toast').toast('show');
+</script>
     <script type="text/javascript">
         $('#new-image').change(function() {
             var file = $('#new-image')[0].files[0];
