--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     {% block extra_css %}
     {% endblock %}
 
-
+    {% block corecss %}
     <!-- Font Awsome -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,6 +35,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
     <!-- Title -->
+    {% endblock %}
 
     {% block corejs %}
     <script src="https://kit.fontawesome.com/21d09db21b.js" crossorigin="anonymous"></script>
@@ -131,7 +132,7 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mx-auto"> 
+                    <ul class="navbar-nav mx-auto">
                         <li class="nav-item second-navbar-li">
                             <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
@@ -204,13 +205,13 @@
     </script>
 
     <!-- Message Timer -->
-    <script>
+    <!-- <script>
         setTimeout(function () {
             let messages = document.getElementById('msg');
             let alert = new bootstrap.Alert(messages);
             alert.close();
         }, 2500);
-    </script>
+    </script> -->
     <script src="{% static 'styles/js/quantity_update.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
