--- a/musicapp/templates/comments/all_songs_comments.html
+++ b/musicapp/templates/comments/all_songs_comments.html
@@ -19,20 +19,27 @@
                                 -- {{ comment.user_profile.user.username }}
                             </div>
                             <div class="d-none d-sm-block">
-                            Created at: {{ comment.created_at }}
-                            <br>
-                            Modified at: {{ comment.modified_at }}
+                                Created at: {{ comment.created_at }}
+                                <br>
+                                Modified at: {{ comment.modified_at }}
                             </div>
                             <form action="{% url 'like_post' comment.pk %}" method="POST">
                                 {% csrf_token %}
-                                <button type="submit", name="comment_id" value="{{ comment.id }}", class="btn btn-primary btn-sm">Like</button>
+                                <button type="submit" name="comment_id" value="{{ comment.id }}" class="like-button rounded-2">
+                                    <i class="fa-solid fa-thumbs-up like-button " >
+                                        {{ comment.likes.count }}
+                                   </i>
+                                </button>
                             </form>
+                       
                             <div class="d-flex">
                                 {% if comment.user_profile.user == request.user or request.user.is_superuser %}
                                 <!-- User who wrote the comment or a superuser  -->
-                                <a href="{% url 'edit_comment' pk=comment.pk %}" class="btn btn-primary btn-sm me-2">Edit</a>
+                                <a href="{% url 'edit_comment' pk=comment.pk %}"
+                                    class="btn btn-primary btn-sm me-2">Edit</a>
                                 <!-- Y/N JavaScript -->
-                                <a href="{% url 'comment_delete' comment.pk %}" class="btn btn-danger confirm-delete btn-sm">Delete</a>
+                                <a href="{% url 'comment_delete' comment.pk %}"
+                                    class="btn btn-danger confirm-delete btn-sm">Delete</a>
                                 {% endif %}
                             </div>
                         </div>
