--- a/merchandise/templates/merchandise/all_merch.html
+++ b/merchandise/templates/merchandise/all_merch.html
@@ -1,6 +1,10 @@
-{% extends 'base.html' %}
-{% load static %}
-
+{% extends "base.html" %} {% load static %} {% block page_header %}
+<div class="container header-container">
+  <div class="row">
+    <div class="col"></div>
+  </div>
+</div>
+{% endblock %}
 {% block content %}
 <main class="container-fluid dave">
     <h1 class="text-center lifeline-font"> <i>Merchandise</i></h1>
@@ -46,9 +50,16 @@
         </div>
     </div>
 </main>
+
+
+
+<!-- JavaScript code to initialize Bootstrap components -->
 {% endblock %}
 
 {% block postloadjs %}
+<script type="text/javascript">
+    $('.toast').toast('show');
+</script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         // Wait for the DOM to be fully loaded before attaching the click event handler
@@ -66,4 +77,12 @@
         });
     });
 </script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        console.log('Page loaded'); // Add a console log statement to check if the page is loaded
+        // Your other JavaScript code here
+    });
+</script>
+
 {% endblock %}
