--- a/merchandise/templates/merchandise/prod_confirm_delete.html
+++ b/merchandise/templates/merchandise/prod_confirm_delete.html
@@ -20,3 +20,8 @@
     </div>
 </div>
 {% endblock %}
+{% block postloadjs %}
+<script type="text/javascript">
+    $('.toast').toast('show');
+</script>
+{% endblock %}
