--- a/templates/base.html
+++ b/templates/base.html
@@ -136,14 +136,18 @@
                         <li class="nav-item second-navbar-li">
                             <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" aria-current="page" href="{% url 'song_list' %}">Anthology</a>
+                        </li>
+                        <li class="nav-item second-navbar-li">
+                            <a class="nav-link" aria-current="page" href="{% url 'contact_us' %}">Contact Us</a>
+                        </li>
                         {% if request.user.is_authenticated %}
                         <li class="nav-item second-navbar-li">
                             <a class="nav-link" aria-current="page" href="{% url 'song_all_comments' %}">Comments</a>
                         </li>
                         {% endif %}
-                        <li class="nav-item second-navbar-li">
-                            <a class="nav-link" aria-current="page" href="{% url 'song_list' %}">Anthology</a>
-                        </li>
+                        
                         <li class="nav-item second-navbar-li">
                             <a class="nav-link" href="{% url 'all_merchandise' %}">All Merchandise</a>
                         </li>
@@ -213,8 +217,8 @@
         }, 2500);
     </script> -->
     <script src="{% static 'styles/js/quantity_update.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
     {% endblock %}
 
