--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -19,10 +19,10 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">Thank You</h2>
+            <h2 class="logo-font text-white mb-4">Thank You</h2>
             <hr>
-            <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{
-                    order.email }}</strong>.</p>
+            <p class="text-white">Your order information is below. A confirmation email will be 
+                sent to <strong >{{ order.email }}</strong>.</p>
         </div>
     </div>
 
@@ -31,7 +31,7 @@
             <div class="order-confirmation-wrapper p-2 border">
                 <div class="row">
                     <div class="col">
-                        <small class="text-muted">Order Info:</small>
+                        <small class="heading-color">Order Info:</small>
                     </div>
                 </div>
 
@@ -55,7 +55,7 @@
 
                 <div class="row">
                     <div class="col">
-                        <small class="text-muted">Order Details:</small>
+                        <small class="heading-color">Order Details:</small>
                     </div>
                 </div>
 
@@ -76,7 +76,7 @@
 
                 <div class="row">
                     <div class="col">
-                        <small class="text-muted">Delivering To:</small>
+                        <small class="heading-color">Delivering To:</small>
                     </div>
                 </div>
 
@@ -160,7 +160,7 @@
 
                 <div class="row">
                     <div class="col">
-                        <small class="text-muted">Billing Info:</small>
+                        <small class="heading-color">Billing Info:</small>
                     </div>
                 </div>
 
@@ -205,7 +205,8 @@
             {% else %}
             <a href="{% url 'all_merchandise' %}" class="btn btn-black rounded-0 my-2">
                 <span class="icon mr-2">
-                    <i class="fas fa-gifts"></i>
+                    <i class="fas fa-guitar"></i>
+                    <i class="fas fa-play"></i>
                 </span>
                 <span class="text-uppercase">Back To Shopping!</span>
             </a>
