--- a/musicapp/templates/comments/comment_edit.html
+++ b/musicapp/templates/comments/comment_edit.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="comments-card container col-10 col-sm-3 d-flex flex-column justify-content-center align-items-center comments-bg-color">
     <h1 class="comments-edit-card ">Edit a Comment</h1>
-    <form method="post" class="m-2">
+    <form method="post" class="m-2" style="color: white;">
         {% csrf_token %}
         {{ form.as_p }}
         <!-- Summernote for id_text -->
@@ -15,3 +15,4 @@
         <button type="submit">Submit</button>
     </form>
 </div>
+{% endblock %}
