--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,8 @@
     {% block corecss %}
     <!-- Include Summernote CSS from CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.18/summernote-bs4.min.css">
-
+    <!-- Summer Note -->
+    <link rel="stylesheet" href="{% static 'styles/css/custom-summernote.css' %}">
     <!-- Font Awsome -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
