--- a/merchandise/templates/merchandise/add_merch.html
+++ b/merchandise/templates/merchandise/add_merch.html
@@ -15,15 +15,15 @@
     <div class="row">
         <div class="col-12 col-md-6">
             <hr>
-            <h2 class="logo-font mb-4">Merchandise Management</h2>
-            <h5 class="text-muted">Add Merchandise</h5>
+            <h2 class="logo-font mb-4 text-add-merch">Merchandise Management</h2>
+            <h5 class="text-add-merch">Add Merchandise</h5>
             <hr>
         </div>
     </div>
 
     <div class="row">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'add_merch' %}" class="form mb-2" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'add_merch' %}" class="form mb-2 text-add-merch" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                 {% if field.name != 'image' %}
@@ -34,7 +34,7 @@
                 {% endfor %}
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'all_merchandise' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Add Merchandise</button>
+                    <button class="btn btn-black rounded-0 text-add-merch" type="submit">Add Merchandise</button>
                 </div>
             </form>
         </div>
