--- a/merchandise/templates/merchandise/edit_merch.html
+++ b/merchandise/templates/merchandise/edit_merch.html
@@ -15,15 +15,15 @@
     <div class="row">
         <div class="col-12 col-md-6">
             <hr>
-            <h2 class="logo-font mb-4">Merchandise Management</h2>
-            <h5 class="text-muted">Edit Merchandise</h5>
+            <h2 class="logo-font mb-4 text-edit-merch">Merchandise Management</h2>
+            <h5 class=" text-white text-edit-merch">Edit Merchandise</h5>
             <hr>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
+        <div class="col-12 col-md-6  text-white">
+            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2 text-edit-merch" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                 {% if field.name != 'image' %}
