--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,9 +5,9 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
+    <hr class="text-white">
     <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
-    <hr>
+    <hr class="text-white">
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change text-white">
         {% csrf_token %}
