--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -4,13 +4,13 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
-    <hr>
+    <hr class="text-white">
+    <h2 class="logo-font mb-4 text-white">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+    <hr class="text-white">
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+        <p class="text-white">{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
     {% else %}
         {% if form %}
             <form method="POST" action="{{ action_url }}">
@@ -20,7 +20,7 @@
                 <input type="submit" name="action" value="{% trans 'change password' %}"/>
             </form>
         {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
+            <p class="text-white">{% trans 'Your password is now changed.' %}</p>
         {% endif %}
     {% endif %}
 {% endblock %}
