--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,9 +5,9 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Set Password" %}</h2>
-    <hr>
+    <hr class="text-white">
+    <h2 class="logo-font mb-4 text-white" >{% trans "Set Password" %}</h2>
+    <hr class="text-white">
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
