--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,8 +7,8 @@
 {% endblock %} {% block content %}
 
 <main class="container d-flex flex-lg-row flex-column justify-content-start align-items-center distance-top-nav">
-  <aside class=" text-white">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-12 p-2 text-white green">
+  <aside class=" text-white ">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12 p-2 text-white rounded-4">
       <br />
       <h1 class="lifeline-font">
         <i>Blue Pulse</i>
@@ -46,20 +46,9 @@
       </p>
     </div>
   </aside>
-  <aside class="container  col-lg-6 col-md-8 col-sm-10 col-11 red">
+  <div class="container  col-lg-6 col-md-12 col-sm-12 col-11">
 
-    <div class="row justify-content-center align-content-end green ">
-      <div class="col-md-4 rounded-4 col-lg-4 blue">
-        <div class="card mt-5 navbar-top ">
-          <div class="card-body text-center newsletter-format">
-            <h5 class="card-title newsletter-format">Subscribe to Our Newsletter</h5>
-            <p class="card-text newsletter-format">Stay updated with the latest news and updates!</p>
-            <a href="{% url 'subscribe' %}" class="btn btn-primary">Join Now</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </aside>
-  
+  </div>
+
 </main>
 {% endblock %}
