--- a/newsletter/templates/newsletter/subscribe.html
+++ b/newsletter/templates/newsletter/subscribe.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="container header-container">
+<div class="container header-container min-height">
     <div class="overlay"></div>
     <div class="row">
         <div class=" col-md-6 col-sm-10 col-11">
@@ -13,7 +13,7 @@
                 <form method="post" class="form-group" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button type="submit" class="btn btn-danger ">Update</button>
+                    <button type="submit" class="btn btn-danger ">Join</button>
                     <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
                 </form>
             </div>
