--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -3,6 +3,12 @@
     height: 50px;
 }
 
+
+.nav-link[aria-current="page"] {
+    text-decoration: underline wavy #f8c348 0.15rem;
+    text-underline-offset: 0.5rem;
+}
+
 /* News Letter */
 
 .newsletter-format {
