--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
     <header class="head-head fixed-top">
         <nav class="navbar navbar-expand-lg navbar-top">
             <div class="container-fluid">
-                <a class="navbar-brand text-white" href="{% url 'home' %}"><strong>Blue Pulse</strong> </a>
+                <a class="navbar-brand text-white " href="{% url 'home' %}"><strong>Blue Pulse</strong> </a>
                 <!-- Query -->
                 <div class="col-6 col-lg-4 my-auto py-1 py-lg-0">
                     <form method="GET" action="{% url 'all_merchandise' %}">
@@ -139,31 +139,32 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item second-navbar-li">
-                            <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+
+                            <a class="nav-link nav-bar-status" aria-current="" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item second-navbar-li">
-                            <a class="nav-link" aria-current="page" href="{% url 'song_list' %}">Anthology</a>
+                            <a class="nav-link nav-bar-status" aria-current="" href="{% url 'song_list' %}">Anthology</a>
                         </li>
                         <li class="nav-item second-navbar-li">
-                            <a class="nav-link" aria-current="page" href="{% url 'contact_us' %}">Contact Us</a>
+                            <a class="nav-link nav-bar-status" aria-current="" href="{% url 'contact_us' %}">Contact Us</a>
                         </li>
                         {% if request.user.is_authenticated %}
                         <li class="nav-item second-navbar-li">
-                            <a class="nav-link" aria-current="page" href="{% url 'song_all_comments' %}">Comments</a>
+                            <a class="nav-link nav-bar-status" aria-current="" href="{% url 'song_all_comments' %}">Comments</a>
                         </li>
                         {% endif %}
 
                         <li class="nav-item second-navbar-li">
-                            <a class="nav-link" href="{% url 'all_merchandise' %}">All Merchandise</a>
+                            <a class="nav-link nav-bar-status" aria-current="" href="{% url 'all_merchandise' %}">All Merchandise</a>
                         </li>
                         <li class="nav-item second-navbar-li">
-                            <a class="nav-link" href="{% url 'all_merchandise' %}?category=clothes">Clothes</a>
+                            <a class="nav-link nav-bar-status" aria-current="" href="{% url 'all_merchandise' %}?category=clothes">Clothes</a>
                         </li>
                         <li class="nav-item second-navbar-li">
-                            <a class="nav-link" href="{% url 'all_merchandise' %}?category=memorabilia">Memorabilia</a>
+                            <a class="nav-link nav-bar-status" aria-current="" href="{% url 'all_merchandise' %}?category=memorabilia">Memorabilia</a>
                         </li>
                         <li class="nav-item second-navbar-li">
-                            <a class="nav-link" href="{% url 'all_merchandise' %}?category=cd">Anthology CD</a>
+                            <a class="nav-link nav-bar-status" aria-current="" href="{% url 'all_merchandise' %}?category=cd">Anthology CD</a>
                         </li>
 
                     </ul>
@@ -212,7 +213,20 @@
     <script type="text/javascript">
         $('.toast').toast('show');
     </script>
+   <script>
+    document.querySelectorAll('.nav-bar-status').forEach(link => {
+        console.log('Link Text:', link.innerText);
+        console.log('Link Href:', link.href);
+        console.log('Window Location:', window.location.href);
 
+        // Compare only the pathname part of the URL
+        if (link.pathname === window.location.pathname) {
+            console.log('Setting aria-current to page');
+            link.setAttribute('aria-current', 'page');
+        }
+    });
+</script>
+</script>
     <!-- Message Timer -->
     <!-- <script>
         setTimeout(function () {
